<resources>
    <string name="app_name">Ежедневник</string>
    <string name="example">пример</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Сохранить</string>
    <string name="Start">Начало</string>
    <string name="Finish">Конец</string>
    <string name="Delete">Удалить</string>
    <string name="Name">Имя</string>
    <string name="Example">Пример</string>
    <string name="Description">Описание</string>
    <string name="Date">Дата</string>
    <string name="time">Время</string>
    <string name="date_selection">Выбор даты</string>
    <string name="time_selection">Выбор времени</string>
</resources>