<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/editNoteFragment"
    android:tag="editNoteFragment"
    tools:context=".presentation.mainFragments.EditNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewStartLabel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="2"
            android:text="@string/Date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="date" />

            <Button
                android:id="@+id/button_date_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAllCaps="false"
                android:text="@string/date_selection" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewFinishLabel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="2"
            android:text="@string/time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="date" />

            <Button
                android:id="@+id/button_time_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAllCaps="false"
                android:text="@string/time_selection" />
        </LinearLayout>


        <TextView
            android:id="@+id/textViewNameLabel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="start"
            android:textSize="20sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Example" />

        <TextView
            android:id="@+id/textViewDescLabel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:gravity="start"
            android:text="@string/Description" />

        <EditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:gravity="start"
            android:textSize="20sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Example" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:text="@string/Delete"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:text="@string/save"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>